 ! Base: Polishing the interface some more...
 % Base: Updated for SMF 2.0 Beta 4 Public.
 ! Base: Allow pretty URLs to be verified. (Security.php)
 + extras: Added a patch to fix relative URLs used by the arcade mod.
 ! Base: Don't strip final ;s in entities, it breaks validation. (PrettyUrls-Filters.php)

Pretty URLs 0.8.1                                                 22 March, 2008
================================================================================
 + Base: Added a hidden tool to edit the filters array at sa=filters. (PrettyUrls.php, Subs-PrettyUrls.php, PrettyUrls.template.php)
 ! Base: Added a place for notices to be displayed in the admin interface. (PrettyUrls.php, PrettyUrls.template.php)
 ! Base: Started polishing it up a little.
 % Base: Updated for SMF 2.0 Beta 3! (Though it's not all right for SQLite yet. And I haven't tested PostgreSQL yet at all!)

Pretty URLs 0.8                                                    7 March, 2008
================================================================================
 ! Profiles: Fixed a minor typo.
 + wiki: Added the DatabaseChanges page.
 ! Topics: Use 301 redirections for topics with wrong board URLs. (Display.php)
 + Base: Romanise Modern Greek. (Subs-PrettyUrls.php)
 ! Boards: Don't be so eager to find board URLs, targetboard doesn't count! (PrettyUrls-Filters.php)
 ! Topics: Don't rewrite URLs for topics that don't exist. (PrettyUrls-Filters.php)
 % Display database changes on (un)installing. (install.php, uninstall.php)
 + Created a script to uninstall all database changes. (uninstall.php)
 ! Base: Finally fixed quotes. Sure hope I won't regret saying that. (QueryString.php, Subs-PrettyUrls.php)
 % All functions now begin with 'pretty'.
 ! Base: Process <form>s, but not <script>s. (QueryString.php)
 ! Base: Added a .htaccess fix for shared hosts.
 * Boards: Added an interface to edit a board's URL. (ManageBoards.template.php)
 % seo4smf: Added a package to 301 redirect SEO4SMF's URLs.